# chess-engine-cpp

./: CMakeLists.txt  README.md  eval_test
src/: main.cpp
src/board/: board.cpp  board.h
src/evaluation/: eval.cpp  eval.h  pst.h
src/hash/: tt.cpp  tt.h  zobrist.cpp  zobrist.h
src/movegen/: attacks.cpp  attacks.h  movegen.cpp  movegen.h
src/search/: search.cpp  search.h
src/uci/: uci.cpp  uci.h
tests/: eval_test.cpp  perft_test.cpp
